tests/baselines/reference/anyMappedTypesError.errors.txt
anyMappedTypesError.ts(1,12): error TS7039: Mapped object type implicitly has an 'any' template type.


==== anyMappedTypesError.ts (1 errors) ====
    type Foo = {[P in "bar"]};
               ~~~~~~~~~~~~~~
!!! error TS7039: Mapped object type implicitly has an 'any' template type.